fix(subnav): add background color and z-index
related to OPT-7285

--- a/client/src/modules/components/navigation/SubNav/SubNav.scss
+++ b/client/src/modules/components/navigation/SubNav/SubNav.scss
@@ -8,6 +8,8 @@
   border-bottom: 1px solid var(--silver-darken-87);
   font-size: 15px;
   display: flex;
+  background-color: var(--white);
+  z-index: 1;
 
   .NavItem:first-child {
     border-left: none;
